--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -15,6 +15,7 @@
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-rating-stars-component": "^2.2.0"
