--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -18,6 +18,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-rating-stars-component": "^2.2.0"
+    "react-rating-stars-component": "^2.2.0",
+    "react-stars": "^2.2.5"
   }
 }
