--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
     "bootstrap": "^5.2.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "^13.4.1",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-bootstrap": "^2.7.4",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-rating-stars-component": "^2.2.0"
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.11.2"
   }
 }
