--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "init": "node index.js --init"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1"
   }
 }
